--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10962,3 +10962,22 @@ a.text-dark:focus {
   }
 }
 
+#posts-wrap {
+  margin: auto;
+  width: 75%;
+}
+
+#posts-wrap #posts-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#posts-wrap #posts-container #post {
+  flex-basis: 33.3333333333%;
+}
+
+#posts-wrap #posts-container #post img {
+  height: 200px;
+  width: 300px;
+}
+
